@@ -36733,6 +36733,19 @@ test clock-65.1 {clock add, bad option [Bug 2481670]} {*}{
     -result {bad switch "-foo"*}
 }
 
+test clock-66.1 {clock scan, no date, never-before-seen timezone} {*}{
+    -setup {
+	::tcl::clock::ClearCaches
+    }
+    -body {
+	clock scan 1200 \
+	    -timezone {<EST>+05:00:00<EDT>+04:00:00,M3.2.0/02:00:00,M11.1.0/02:00:00} \
+	    -base 1256529600 \
+	    -format %H%M
+    }
+    -result 1256572800
+}
+
 # cleanup
 
 namespace delete ::testClock
